longhorn/longhorn-prod-1/kubernetes/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-web-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn-prod-1.kube-prod-2.home.clcreative.de`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
      secretName: longhorn-web-ui-tls
